2009-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/Makefile.am (coders_tiff_la_LIBADD): Libtiff may now also
	depend on libjbig and the math library.

	* doc/gmdoc2html: Fix link to ball.png.  Problem was reported by
	Wes Fox.

	* VisualMagick/installer/inc/files-documentation.isx: Include Wand
	API documentation.

	* VisualMagick/installer/inc/icons-associate.isx: Fix Windows
	Start menu link to web pages.

	* configure.ac: --with-perl is changed to --without-perl since
	building PerlMagick is no longer the default.  Building PerlMagick
	automatically has caused too many problems.

	* PerlMagick/Makefile.am: GraphicsMagick no longer automatically
	installs PerlMagick.  Use the procedure described by
	PerlMagick/README.txt to build and install PerlMagick.

2009-05-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Debian stores Ghostscript fonts under
	/usr/share/fonts/type1/gsfonts so check there for fonts.  Issue
	reported by Ralf Wildenhues.

2009-05-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Magick.xs: Fix Ping of blob.

	* PerlMagick/t/ping.t: Added tests for pinging files and blobs.

	* www/perl.rst: Ping blob syntax is like $image->Ping(blob=>@blob).

	* PerlMagick/Makefile.PL.in: Increase the probability of
	PerlMagick build success by using the user-specified C compiler as
	the linker if the C compiler was already used as the linker.  This
	helps if the C compiler used to build GraphicsMagick is a more
	recent vintage than the one used to build Perl.

	* PerlMagick/t/wmf/read.t: Test needs to be more lenient for
	Linux.

	* Makefile.am (TESTS_ENVIRONMENT): Pass a complete text
	environment so that we don't need to execute rungm.sh in order to
	run the test suite.

2009-05-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* version.sh: Define PACKAGE_STRING.

2009-05-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/tempfile.c (ComposeTemporaryFileName): Use new random