@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2009-05-29  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> doc/options.imdoc: Document -format "%p".  Problem was reported
+        by Stijn Sanders.
+
+</UL>
+<p>
 2009-05-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
